[2.x] API improvements
Changes:
* added execution timeout
* added simple(r) "grab output as string"
* maven-executor ONLY made Java 8